[gd_scene load_steps=8 format=3 uid="uid://b02ownp57ivti"]

[ext_resource type="PackedScene" uid="uid://bne1khiykten2" path="res://scenes/player.tscn" id="1_nnsk1"]
[ext_resource type="Script" uid="uid://dgr2d61l7e6du" path="res://scenes/world.gd" id="1_rwgxs"]
[ext_resource type="Texture2D" uid="uid://byjnvwvwcbd6h" path="res://assets/blue_grid_sprite.png" id="2_grid"]
[ext_resource type="PackedScene" uid="uid://bjkdkwbjygm8e" path="res://scenes/enemies/pink_triangle_enemy.tscn" id="3_4wyf3"]
[ext_resource type="Script" uid="uid://b6j5us84w2lmg" path="res://scripts/enemy_path.gd" id="5_71j4m"]
[ext_resource type="PackedScene" uid="uid://y1hrxoxnst46" path="res://ui/hud.tscn" id="6_qfnet"]

[sub_resource type="Curve2D" id="Curve2D_qfnet"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -820, -580, 0, 0, 0, 0, -820, 580, 0, 0, 0, 0, 820, 580, 0, 0, 0, 0, 820, -580, 0, 0, 0, 0, -820, -580)
}
point_count = 5

[node name="World" type="WorldEnvironment"]
script = ExtResource("1_rwgxs")
pink_triangle_enemy_scene = ExtResource("3_4wyf3")

[node name="Background" type="Parallax2D" parent="."]
z_index = -1
repeat_size = Vector2(640, 640)
repeat_times = 5

[node name="GridSprite" type="Sprite2D" parent="Background"]
texture_repeat = 2
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_grid")
region_enabled = true
region_rect = Rect2(0, 0, 8000, 8000)

[node name="Player" parent="." instance=ExtResource("1_nnsk1")]
position = Vector2(-1, 0)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_qfnet")
script = ExtResource("5_71j4m")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(-820, -580)
rotation = 1.5707964

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HUD" parent="." instance=ExtResource("6_qfnet")]

[node name="GameTimer" type="Timer" parent="."]

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
